--- a/data/po/da.po
+++ b/data/po/da.po
@@ -6,7 +6,7 @@
 # Benau, 2018
 # Benau, 2018
 # Joe Hansen <joedalton2@yahoo.dk>, 2009,2015
-# Lars Lyngby <larslyngby@hotmail.com>, 2019-2021
+# Lars Lyngby <larslyngby@hotmail.com>, 2019-2022
 # scootergrisen, 2015-2021
 # Søren Dyhr <siadyhr@gmail.com>, 2015-2016
 msgid ""
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-05-25 09:02+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Lars Lyngby <larslyngby@hotmail.com>, 2019-2021\n"
+"Last-Translator: Lars Lyngby <larslyngby@hotmail.com>, 2019-2022\n"
 "Language-Team: Danish (http://www.transifex.com/supertuxkart/supertuxkart/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5540,7 +5540,7 @@ msgstr "E-mailene er ikke ens!"
 msgid ""
 "Online username can only contain alphanumeric (ASCII) characters, periods, "
 "dashes and underscores!"
-msgstr ""
+msgstr "Online brugernavn må kun indeholde bogstaver a-z (ASCII), punktummer, bindestreger og understregningstegn _!"
 
 #: src/states_screens/online/register_screen.cpp:374
 msgid "Online username has to be between 3 and 30 characters long!"
