--- a/data/po/it.po
+++ b/data/po/it.po
@@ -20,6 +20,7 @@
 # mimiz skindoor <matteomeneghello02@gmail.com>, 2020-2021
 # Massimo Gismondi <omino.gis@gmail.com>, 2019-2020
 # Ioma Taani, 2018-2021
+# Riccardi Unix, 2022
 # Simone Rizzo, 2019
 # Simone Rizzo, 2019
 # s m <immiimmiimmiimmi@gmail.com>, 2020
@@ -29,7 +30,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-05-25 09:02+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Ioma Taani, 2019-2022\n"
+"Last-Translator: Riccardi Unix, 2022\n"
 "Language-Team: Italian (http://www.transifex.com/supertuxkart/supertuxkart/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -103,7 +104,7 @@ msgstr "Pilota d'oro"
 msgid ""
 "Win against at least 3 AIs in normal race, time-trial, and follow the "
 "leader."
-msgstr "Vinci contro almeno 3 IA in una gara, prova a tempo e \"segui il leader\"."
+msgstr "Vinci contro almeno 3 IA in gare \"prova a tempo\" e/o \"segui il leader\"."
 
 #. I18N: ./data/achievements.xml
 msgid "Powerup Love"
@@ -443,7 +444,7 @@ msgstr "Ripristina"
 
 #. I18N: ./data/gui/dialogs/custom_video_settings.stkgui
 msgid "Graphics Settings"
-msgstr "Impostazioni grafiche"
+msgstr "Grafica"
 
 #. I18N: ./data/gui/dialogs/custom_video_settings.stkgui
 #. I18N: Video settings
@@ -1385,7 +1386,7 @@ msgstr "Inizia il tutorial"
 #. I18N: ./data/gui/screens/help1.stkgui
 #. I18N: In the help menu
 msgid "Collect blue gift boxes, they will give you powerups."
-msgstr "Raccogli i pacchi regalo blu, riceverai un potenziamento."
+msgstr "Raccogliendo i pacchi regalo blu, riceverai un potenziamento."
 
 #. I18N: ./data/gui/screens/help1.stkgui
 #. I18N: In the help menu
@@ -1399,7 +1400,7 @@ msgid ""
 "Collecting nitro allows you to get speed boosts whenever you wish by "
 "pressing the appropriate key or button. You can see your current level of "
 "nitro in the gauge at the bottom-right of the race screen."
-msgstr "Raccogliere nitro ti permette di avere degli aumenti di velocità quando lo desideri premendo il pulsante impostato. Puoi vedere il livello attuale di nitro in basso a destra nella schermata di gioco."
+msgstr "La raccolta di nitro consente di ottenere incrementi di velocità ogni volta che lo si desidera premendo il tasto impostato. Il livello attuale di nitro è visibile nell'indicatore in basso a destra della schermata di gara."
 
 #. I18N: ./data/gui/screens/help1.stkgui
 #. I18N: In the help menu
@@ -1477,7 +1478,7 @@ msgstr "Caccia alle uova: Esplora le piste per trovare tutte le uova nascoste."
 msgid ""
 "Ghost replay: Race against ghost replays in time-trial or egg hunt mode, and"
 " record your own!"
-msgstr "Replay fantasma: corri contro un fantasma in \"prova a tempo\" o in \"caccia alle uova\" e registra il tuo personale fantasma!"
+msgstr "Replay fantasma: Gareggia contro un replay fantasma in modalità \"prova a tempo\" o \"caccia alle uova\" e registra il tuo replay personale!"
 
 #. I18N: ./data/gui/screens/help2.stkgui
 #. I18N: In the help menu
@@ -1633,7 +1634,7 @@ msgstr "Velocità massima: più è alta, più veloce è il kart. Utile nelle pis
 msgid ""
 "Nitro efficiency - The higher it is, the more speed you get from a can of "
 "nitro. A lighter kart will have higher nitro efficiency."
-msgstr "Efficienza della nitro: Più ce n'è, più velocità si avrà da un barattolo di nitro. Un kart leggero avrà un'efficienza maggiore."
+msgstr "Efficienza della nitro: Più ce n'è, più velocità si otterrà da un contenitore di nitro. Un kart più leggero avrà una maggiore efficienza."
 
 #. I18N: ./data/gui/screens/help6.stkgui
 #. I18N: In the help menu
@@ -1666,7 +1667,7 @@ msgid ""
 " enough players. Then, you can choose your kart and vote for the next track "
 "to race on. An addon track is allowed only if it exists on all joined "
 "players and the server."
-msgstr "Appena sei in un server, la gara inizierà solamente se il proprietario (il giocatore con la corona) lo decide. I server ufficiali possono iniziare la gara automaticamente se ci sono abbastanza giocatori. In seguito, potrai scegliere il tuo kart e votare per la prossima pista da percorrere. Si può gareggiare su una pista Add-On solo se il server e tutti i giocatori presenti la hanno installata"
+msgstr "Una volta connesso ad un server, la gara inizierà solamente quando il proprietario (il giocatore con la corona) lo deciderà. I server ufficiali possono iniziare la gara automaticamente se ci sono abbastanza giocatori. In seguito, potrai scegliere il tuo kart e votare la pista successiva su cui gareggiare. Si può gareggiare su una pista Add-On solo se il server e tutti i giocatori presenti la hanno installata."
 
 #. I18N: ./data/gui/screens/help7.stkgui
 #. I18N: In the help menu
@@ -2472,7 +2473,7 @@ msgstr "Prima di tutto: concentrarsi alla guida del kart."
 
 #. I18N: ./data/tips.xml
 msgid "The rescue key (button) is very useful."
-msgstr "Il tasto \"salvataggio\" è molto utile."
+msgstr "Il tasto di soccorso è molto utile."
 
 #. I18N: ./data/tips.xml
 msgid "Be careful when close to other karts, they may attack you!"
@@ -5028,7 +5029,7 @@ msgstr "Tipo di gioco: calcio"
 #: src/states_screens/dialogs/server_info_dialog.cpp:109
 #, c-format
 msgid "Server location: %s"
-msgstr "Locazione server: %s"
+msgstr "Nazionalità del server: %s"
 
 #. I18N: In server info dialog, showing the current track playing in server
 #: src/states_screens/dialogs/server_info_dialog.cpp:118
@@ -5562,7 +5563,7 @@ msgstr "L'email non corrisponde!"
 msgid ""
 "Online username can only contain alphanumeric (ASCII) characters, periods, "
 "dashes and underscores!"
-msgstr ""
+msgstr "Il nome utente di rete può contenere solo caratteri alfanumerici (ASCII), punti, trattini e trattini bassi"
 
 #: src/states_screens/online/register_screen.cpp:374
 msgid "Online username has to be between 3 and 30 characters long!"
@@ -6238,7 +6239,7 @@ msgstr "Senza potenziamenti, conta solo la tua abilità alla guida!"
 #. I18N: short definition for follow-the-leader game mode
 #: src/states_screens/race_setup_screen.cpp:109
 msgid "Keep up with the leader kart but don't overtake it!"
-msgstr "Tieni il passo del kart leader, ma non sorpassarlo!"
+msgstr "Segui il kart leader, ma non sorpassarlo!"
 
 #: src/states_screens/race_setup_screen.cpp:115
 msgid "Hit others with weapons until they lose all their lives."
